# LO21

./: .gitignore  CMakeLists.txt  GitHubLink.txt  README.md  main.c  test.c
doc/: Alogrithm.md  Conception.md  Functioning.md  README.md
doc/en/: Alogrithm.md  Conception.md  Function.md  Functioning.md
doc/fr/: Alogrithm.md  Conception.md  Function.md  Functioning.md  Test.md
exemple/: main.c
include/: BC.h  DB.h  ExpertSys.h  FactList.h  Properties.h  Rules.h  define.h  list.h
src/: BC.c  DB.c  ExpertSys.c  FactList.c  Properties.c  Rules.c  define.c  list.c
test/: BCTest.c  FactListTest.c  RuleTest.c  TestRules.c  test_FactList.c
test/units_test/: Makefile  test_DB.c  test_FactList.c  test_Rules.c  test_include.c
